--- a/assets/sass/client-area.sass
+++ b/assets/sass/client-area.sass
@@ -12,6 +12,20 @@ $white: white
 $site_max_width: 960px
 $dark: black
 
+
+// Clearfix
+%cf
+	&:before, &:after
+		content: " "
+		display: table
+
+	&:after
+		clear: both
+
+.grid-sizer, .entry-masonry
+	width: 33%
+	padding: 3px
+
 @import "client"
 @import "single"
 @import "password_protected"
