--- a/assets/sass/_password_protected.sass
+++ b/assets/sass/_password_protected.sass
@@ -1,27 +1,29 @@
 .protected-area
 	width: 100%
-	min-height: 70vh
+	min-height: 99vh
 
 	display: flex
 	flex-direction: column
 	align-items: center
 	justify-content: space-around
 
-	background-color: $black
-
-	max-width: $site_max_width
 	margin: $padding auto
 
-	border-radius: 6px
 	background-size: cover
 	background-position: 50% 50%
 
 	padding-top: $padding
 	padding-bottom: $padding
 
+	color: $white
+
 	input[type=password]
-		color: $black
 		width: 100%
+	.button
+		margin-top: .5em
+		width: 100%
+		max-width: 200px
+		border-radius: 3px
 
 	.form-fields
 		margin-top: $halfling
@@ -29,7 +31,6 @@
 
 	.content-area
 		max-width: 400px
-		background-color: transparentize($black, 0.3)
 		border-radius: 6px
 		padding: $padding
 
