--- a/assets/sass/_single.sass
+++ b/assets/sass/_single.sass
@@ -5,7 +5,7 @@
 .entry-client-area
 	@extend %cf
 
-.vca-image
+.ca-image
 	user-select: none
 	@extend %cf
 
@@ -79,7 +79,7 @@
 		opacity: 1
 
 
-.vca-title
+.ca-title
 	text-align: center
 	font-size: 2em
 	margin-bottom: 1.4em
@@ -87,7 +87,7 @@
 	@extend %cf
 	display: block
 
-.vca-preview
+.ca-preview
 	position: absolute
 	top: 0
 	left: 0
@@ -104,7 +104,7 @@
 
 
 
-.vca-preview-link
+.ca-preview-link
 	background-color: $light
 	padding: .5em
 	font-size: .75em
