--- a/assets/sass/_actions.sass
+++ b/assets/sass/_actions.sass
@@ -3,7 +3,7 @@
 
 
 
-.vca-gallery-actions
+.ca-gallery-actions
 	text-align: center
 
 	display: none
@@ -12,7 +12,7 @@
 	.js &
 		display: block
 
-.vca-action
+.ca-action
 	padding: $tiny
 	display: inline-block
 
@@ -22,5 +22,5 @@
 	cursor: pointer
 
 	&.is-active
-		opacity: .5c
+		opacity: .5
 		
