--- a/assets/sass/_archive.sass
+++ b/assets/sass/_archive.sass
@@ -12,16 +12,15 @@
 	.ca-entry__date, .ca-entry__title
 		display: block
 
-	.ca-entry__date
-		font-weight: normal
-		font-size: 0.875rem
-
+.ca-entry__date
+	font-weight: normal
+	font-size: .75em
 
 .ca-entry
 	.ca-entry__title
 		line-height: 1
 		margin-top: .5em
-		margin-bottom: .5em
+		margin-bottom: .1em
 
 .ca-filters
 	margin-bottom: $padding
