--- a/assets/sass/_error.sass
+++ b/assets/sass/_error.sass
@@ -1,7 +1,7 @@
 
 
 
-.vca-error__container
+.ca-error__container
 	position: fixed
 	bottom: $padding * 2
 	left: 0
@@ -10,7 +10,7 @@
 	text-align: center
 	z-index: 10000
 
-.vca-error__message
+.ca-error__message
 	background-color: tomato
 	color: white
 	width: 90%
